deploy/k8s/base/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adp-worker
  labels:
    app.kubernetes.io/name: adp-worker
    app.kubernetes.io/part-of: adp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: adp-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adp-worker
        app.kubernetes.io/part-of: adp
    spec:
      containers:
        - name: adp-worker
          image: adp-worker:latest
          imagePullPolicy: Always
